Add details modal to frontend

--- a/frontend/src/app/issues/issues.component.html
+++ b/frontend/src/app/issues/issues.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="issues && issues.length > 0" id="pf-list-standard" class="list-group list-view-pf list-view-pf-view">
-    <div *ngFor="let issue of issues" class="list-group-item" (click)="onSelect(issue)" [class.selected]="issue === selectedIssue">
+    <div *ngFor="let issue of issues" class="list-group-item" (click)="onSelect(issue, content)" [class.selected]="issue === selectedIssue">
         <div class="list-view-pf-actions">
             <button class="btn btn-primary" (click)="onVote(issue)">Vote For This Issue</button>
         </div>
@@ -26,6 +26,8 @@
         </div>
     </div>
 </div>
+
+<app-issue-detail [issue]="selectedIssue"></app-issue-detail>
 
 <div *ngIf="!issues || issues.length === 0">
     <h2>There are no issues to vote on</h2>
