Make it more obvious that issues are clickable

--- a/frontend/src/app/issues/issues.component.html
+++ b/frontend/src/app/issues/issues.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="issues && issues.length > 0" id="pf-list-standard" class="list-group list-view-pf list-view-pf-view">
-    <div *ngFor="let issue of issues" class="list-group-item" (click)="onSelect(issue, content)" [class.selected]="issue === selectedIssue">
+    <div *ngFor="let issue of issues" class="list-group-item issue-item" (click)="onSelect(issue, content)" [class.selected]="issue === selectedIssue">
         <div class="list-view-pf-actions">
             <button class="btn btn-primary" (click)="onVote($event, issue)" [disabled]="votedOnIssues.indexOf(issue.jiraKey) >= 0">Vote For This Issue</button>
         </div>
@@ -13,7 +13,7 @@
                         <a href="{{ issue.jiraIssueUrl }}" target="new" (click)="$event.stopPropagation()">{{ issue.jiraKey }}</a>
                     </div>
                     <div class="list-group-item-text">
-                        {{ issue.title }}
+                        <u>{{ issue.title }}</u>
                     </div>
                 </div>
                 <div class="list-view-pf-additional-info">
